--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="mars-rovers-v2/index.html">Final</a></li>
           </ul>
         </li>
+        <li><a href="progressive-enhancement/index.html" title="Thoughts on Progressive Enhancement">Prototype HTML5 Document</a></li>
 
 
     </ul>
