--- a/progressive-enhancement/index.html
+++ b/progressive-enhancement/index.html
@@ -1,12 +1,3 @@
-<!-- Navigation Section (already on your page) -->
-<nav>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Assignments</a></li>
-    <li><a href="#">Resources</a></li>
-  </ul>
-</nav>
-
 <!-- New Section: Thoughts on Progressive Enhancement -->
 <section id="progressive-enhancement">
   <h2>Thoughts on Progressive Enhancement</h2>
@@ -30,9 +21,18 @@
   </p>
 
   <p>
-    Another helpful article I found on this topic is available here:
-    <a href="https://www.freecodecamp.org/news/what-is-progressive-enhancement-and-why-it-matters-e80c7aaf834a/" target="_blank">
-      What is Progressive Enhancement, and Why It Matters (freeCodeCamp)
-    </a>.
+    For more on this topic, see:
+    <ul>
+      <li>
+        <a href="https://www.freecodecamp.org/news/what-is-progressive-enhancement-and-why-it-matters-e80c7aaf834a/" target="_blank" rel="noopener">
+          What is Progressive Enhancement, and Why It Matters (freeCodeCamp)
+        </a>
+      </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Glossary/Progressive_Enhancement" target="_blank" rel="noopener">
+          Progressive Enhancement — MDN Web Docs
+        </a>
+      </li>
+    </ul>
   </p>
 </section>
