--- a/progressive-enhancement/index.html
+++ b/progressive-enhancement/index.html
@@ -3,25 +3,25 @@
   <h2>Thoughts on Progressive Enhancement</h2>
 
   <p>
-    Progressive enhancement is a way of building websites that starts with a strong,
-    reliable foundation: clean HTML content that works for every user, no matter what
-    device or browser they have. Once the basic structure is in place, developers
-    layer on optional enhancements—like CSS for design and JavaScript for
-    interactivity—only if the user’s browser supports them. This ensures that the
-    essential information is always available, even if advanced features do not load.
+    Progressive enhancement is a way of building websites that starts with a strong
+    reliable foundation with clean HTML content that works for every user no matter what
+    device or browser they have. Once the basic structure is in place developers
+    layer on optional enhancements like CSS for design and JavaScript for
+    interactivity only if the users browser supports them. This ensures that the
+    important information is always available even if advanced features dont load.
   </p>
 
   <p>
-    This approach is important in modern web development because the web is used on
-    many kinds of devices, from new smartphones to old computers with weak
-    connections. Progressive enhancement guarantees accessibility, faster load times,
+    This thought process is important in modern web development because the web is used on
+    many kinds of devices like new smartphones and old computers with weak
+    connections. Progressive enhancement guarantees accessibility with faster load times
     and a more dependable user experience. It also makes websites more maintainable
-    because content, design, and behavior are separated instead of being tangled
+    because content and design and behavior are separated instead of being tangled
     together.
   </p>
 
   <p>
-    For more on this topic, see:
+    For more on this topic see:
     <ul>
       <li>
         <a href="https://www.freecodecamp.org/news/what-is-progressive-enhancement-and-why-it-matters-e80c7aaf834a/" target="_blank" rel="noopener">
