--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <ul>
             <li><a href="mars-rover-v1/index.html">Rough Draft</a></li>
             <li><a href="mars-rovers-v2/index.html">Final</a></li>
+            <li><a href="mars-rover-reflect/index.html">Reflection</a></li>
           </ul>
         </li>
         <li><a href="progressive-enhancement/index.html" title="Thoughts on Progressive Enhancement">Prototype HTML5 Document</a></li>
