--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="mars-rover-reflect/index.html">Reflection</a></li>
           </ul>
         </li>
-        <li><a href="progressive-enhancement/index.html" title="Thoughts on Progressive Enhancement">Prototype HTML5 Document</a></li>
+        <li><a href="progressive-enhancement/index.html" title="Thoughts on Progressive Enhancement">Progressive Enhancement</a></li>
 
 
     </ul>
