--- a/mars-rover-reflect/index.html
+++ b/mars-rover-reflect/index.html
@@ -1,18 +1,18 @@
 <section id="reflection">
   <h2>Project Revision and Reflection</h2>
   <p>
-    Developing this Mars Rover website project helped me strengthen my understanding of front-end web development and the importance of accessibility and structure in modern design. My goal was to create a clean, informative, and visually appealing site that highlights NASA’s Mars Rover Program and its incredible technological achievements.
+    Developing this Mars Rover website project helped me strength my understanding of the front end web development and the importance of accessibility and structure in my design. My goal was to create a clean and informative and visually appealing site that highlights NASAs Mars Rover Program and its incredible technological achievements.
   </p>
 
   <p>
-    During revision, I focused on improving both usability and presentation. I reorganized my HTML structure to use proper semantic elements like <code>&lt;header&gt;</code>, <code>&lt;main&gt;</code>, and <code>&lt;footer&gt;</code> to make the site more accessible for screen readers. I also optimized my images by resizing and balancing their width and height to maintain a better visual layout across different screen sizes.
+    During revision I focused on fixing the usability and presentation. I reorganized my HTML structure to use elements like <code>&lt;header&gt;</code>, <code>&lt;main&gt;</code>, and <code>&lt;footer&gt;</code> to make the site more accessible for screen readers. I also optimized my images by resizing and balancing their width and height to get a better visual layout across different screen sizes.
   </p>
 
   <p>
-    Adding a dark-mode toggle was one of my favorite improvements, allowing users to switch themes for better comfort and readability. I also replaced the old email link with a real contact form so visitors can submit messages directly through the website. This change not only improved functionality but also gave the site a more professional, user-focused design.
+    Adding a dark mode toggle was one of my favorite improvements because it allows users to switch themes for better comfort and readability. I also replaced the old email link with a real contact form so visitors can submit messages directly through the website. This change improved functionality and gave the site a more professional user focused design.
   </p>
 
   <p>
-    Overall, this project taught me how small details—like consistent navigation, color contrast, descriptive alt text, and clean CSS—can make a big difference in user experience. I learned how to apply technical and creative skills together to present accurate, educational information in a way that’s both engaging and accessible to all audiences.
+    Overall this project taught me how small details like consistent navigation or color contrast and descriptive alt text and clean CSS can make a big difference in the experience. I learned how to apply technical and creative skills to present accurate and educational information in a way thats engaging and accessible to all audiences.
   </p>
 </section>
