java slide show

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="mars-rover-reflect/index.html">Reflection</a></li>
           </ul>
         </li>
-        <li><a href="java-slideshow/"Thoughts on Progressive Enhancement">Progressive Enhancement</a></li>
+        <li><a href="java-slideshow/index.html" title="JS Slide Show">Java Slide Show</a></li>
         <li><a href="progressive-enhancement/index.html" title="Thoughts on Progressive Enhancement">Progressive Enhancement</a></li>
 
 
