image slideshow fix

--- a/java-slideshow/index.html
+++ b/java-slideshow/index.html
@@ -120,21 +120,20 @@
 
       <!-- Slide 1 -->
       <div class="slide active fade">
-        <!-- update these src paths to your real image files -->
-        <img src="images/slide1.jpg" alt="Slide 1">
-        <div class="caption">Caption for Slide 1</div>
+        <img src="images/earth.png" alt="Earth from space">
+        <div class="caption">Earth from space</div>
       </div>
 
       <!-- Slide 2 -->
       <div class="slide fade">
-        <img src="images/slide2.jpg" alt="Slide 2">
-        <div class="caption">Caption for Slide 2</div>
+        <img src="images/nasa.png" alt="NASA logo">
+        <div class="caption">NASA logo</div>
       </div>
 
       <!-- Slide 3 -->
       <div class="slide fade">
-        <img src="images/slide3.jpg" alt="Slide 3">
-        <div class="caption">Caption for Slide 3</div>
+        <img src="images/nebula.png" alt="Colorful nebula">
+        <div class="caption">Colorful nebula</div>
       </div>
 
       <!-- Buttons -->
