--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="mars-rovers-v2/index.html">Final</a></li>
             <li><a href="mars-rover-reflect/index.html">Reflection</a></li>
           </ul>
+        <li><a href="slick-demo/index.html" title="Class Assignment">Slick Demo</a></li>
         </li>
         <li><a href="java-slideshow/index.html" title="JS Slide Show">Java Slide Show</a></li>
         <li><a href="progressive-enhancement/index.html" title="Thoughts on Progressive Enhancement">Progressive Enhancement</a></li>
