--- a/mars-rover-reflect/index.html
+++ b/mars-rover-reflect/index.html
@@ -5,7 +5,7 @@
   </p>
 
   <p>
-    During revision I focused on fixing the usability and presentation. I reorganized my HTML structure to use elements like <code>&lt;header&gt;</code>, <code>&lt;main&gt;</code>, and <code>&lt;footer&gt;</code> to make the site more accessible for screen readers. I also optimized my images by resizing and balancing their width and height to get a better visual layout across different screen sizes.
+    During revision I focused on fixing the usability and presentation based on comments from my peer named John. I reorganized my HTML structure to use elements like <code>&lt;header&gt;</code>, <code>&lt;main&gt;</code>, and <code>&lt;footer&gt;</code> to make the site more accessible for screen readers. I also optimized my images by resizing and balancing their width and height to get a better visual layout across different screen sizes.
   </p>
 
   <p>
