--- a/progressive-enhancement/index.html
+++ b/progressive-enhancement/index.html
@@ -8,12 +8,12 @@
     device or browser they have. Once the basic structure is in place developers
     layer on optional enhancements like CSS for design and JavaScript for
     interactivity only if the users browser supports them. This ensures that the
-    important information is always available even if advanced features dont load.
+    important information is always available even if advanced features dont load. Using this method made it much easier to be able to build my final project.
   </p>
 
   <p>
     This thought process is important in modern web development because the web is used on
-    many kinds of devices like new smartphones and old computers with weak
+    many devices like new smartphones and old computers with weak
     connections. Progressive enhancement guarantees accessibility with faster load times
     and a more dependable user experience. It also makes websites more maintainable
     because content and design and behavior are separated instead of being tangled
